<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".UI.translate.TranslateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isScrollContainer="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_tone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tone_translate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:padding="@dimen/activity_vertical_margin"
                        android:text="Tone: "
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/tone_translate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/tone_translate_label"
                        android:layout_toRightOf="@+id/tone_translate_label"
                        android:hint="Not available"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_topics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_tone"
                android:visibility="gone"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/topics_translate_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/activity_vertical_margin"
                        android:text="Topics: "
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/topics_translate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@+id/topics_translate_label"
                        android:layout_toRightOf="@+id/topics_translate_label"
                        android:hint="Not available"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_to_translate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/card_topics"
                card_view:cardCornerRadius="3dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true"
                android:visibility="gone">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Original Phrase:"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingTop="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/layout_padding"
                        android:id="@+id/textView2"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/to_translate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="This is what is happening"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:layout_below="@+id/textView2"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/layout_padding"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/translated_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".8"
            android:hint="@string/translate_here"
            android:maxLines="4" />

        <Button
            android:id="@+id/send_translations"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight=".2"
            android:onClick="sendTranslations"
            android:text="Send"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>